--- a/webserver/templates/signin.html
+++ b/webserver/templates/signin.html
@@ -1,19 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Please Sign In</title>
-</head>
-<body>
-  {% if message %}
-  <p style="color:red">{{ message }}</p>
-  {% endif %}
-  <form action="/signin" method="post">
-    <legend>Please sign in:</legend>
-    <p><input name="username" placeholder="Username" value="{{ username }}"></p>
-    <p><input name="password" placeholder="Password" type="password"></p>
-    <p><button type="submit">Sign In</button></p>
-  </form>
+{% extends "layout.html" %}
+{% block body %}
 
-</body>
-</html>
+      {% if error %}
+	  <p style="color:red">{{ error }}</p>
+	  {% endif %}
+	  <form action="/signin" method="post">
+	    <h1>Please sign in:</h1>
+	    <p><input name="username" placeholder="Username" value="{{ username }}"></p>
+	    <p><input name="password" placeholder="Password" type="password"></p>
+	    <p><button type="submit">Sign In</button></p>
+	  </form>
+  
+{% endblock %}
