--- a/webserver/templates/layout.html
+++ b/webserver/templates/layout.html
@@ -2,7 +2,7 @@
 <title>POI</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <div class=page>
-  <h1>POI</h1>
+  <center><h1>POI-server</h1></center>
   <div class=metanav>
   {% if not session.username %}
     <a href="{{ url_for('signin') }}">signin</a>
