--- a/webserver/templates/layout.html
+++ b/webserver/templates/layout.html
@@ -1,4 +1,7 @@
 <!doctype html>
+<head>
+<meta charset="UTF-8">
+</head>
 <title>POI</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <div class=page>
