--- a/webserver/templates/layout.html
+++ b/webserver/templates/layout.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-<meta charset="UTF-8">
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 </head>
 <title>POI</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
